--- a/style.css
+++ b/style.css
@@ -99,11 +99,11 @@
     font-size: 24px;
 }
 
-.cardContent h2 {
-    font-size: 20px;
+.cardContent .cardMail {
+    font-size: 12px;
 }
 
 .cardContent p {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 600;
 }
